k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-spring-angular: "true"
        io.kompose.service: angular
    spec:
      containers:
        - env:
            - name: API_URL
              value: http://localhost:8080
            - name: TZ
              value: Europe/Berlin
          image: rainerdiekmann/dockerspringangularuser:frontend
          name: angular
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
