k8s/docker-spring-angular-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker-spring-angular
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/docker-spring-angular: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker-spring-angular: "true"
